--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1666,7 +1666,7 @@
           {{ _('Cart') }} (<span id="cart-count">0</span>)
         </a>
         
-        <a class="cart-btn" href="http://192.168.0.240:5003/track-order" target="_blank" style="background: #0d6efd; border-color: #0d6efd;">
+        <a class="cart-btn" href="/track-order" style="background: #0d6efd; border-color: #0d6efd;">
           <i class="fas fa-truck"></i>
           متابعة طلبك
         </a>
